<resources>
    <string name="about">About</string>

    <string name="default_notification_channel_id">MINERVA_DEFAULT</string>
    <string name="cancel">Cancel</string>
    <!--string name="artis_node_address">http://artis.lab10.io:8545/</string-->

    <!--string name="artis_basic_streem_contract_address">0xb39840e402695bd500df92c2e1bde237aff34236</string-->
    <string name="confirm">Confirm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ideintity_action_add_identity">Add Identity</string>
    <string name="nav_identities">Identities</string>
    <string name="nav_values">Values</string>
    <string name="nav_services">Services</string>
    <string name="nav_activities">Activities</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="request_identity_title">Identity request</string>
    <string name="request_authorization_title">Authorization</string>
    <string name="identities_title">Identities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="values_title">Values</string>
    <string name="services_title">Services</string>
    <string name="activities_title">Activities</string>
    <string name="request_payment_title">Payment</string>
    <string name="notification_payment_channel_desc">Control your payment and be notify about what is happening with your valuables.</string>
    <string name="notification_default_channel_desc">Default notification channel for all relevant information from your digital wallet.</string>
    <string name="unknown_service_provider">Uknown</string>
    <string name="notification_payment_ongoing_body">A payment of %2$s%1$3.2f/%3$s to %4$s for charging was started at %5$s and is ongoing</string>
    <string name="notification_payment_ongoing_title">Continuous Payment: %1$s | %2$s </string>
    <string name="notification_payment_starting_title">Continuous Payment Starting ...</string>
    <string name="notification_payment_starting_body">A payment of %1$s to %2$s for charging is being started</string>
    <string name="notification_payment_error_title">Continuous Payment Failed</string>
    <string name="identity_menu_backup">Backup</string>
    <string name="identity_menu_delete">Delete</string>
    <string name="identity_backup">Identity Backup</string>
    <string name="identity_backup_info">Write down these words in this order to back up everything</string>
    <string name="identity_backup_copy_to_clipboard">Copy to clipboard</string>
    <string name="notify_copiedtoclipboard">Copied to clipboard</string>
    <string name="nav_backup">Backup</string>
    <string name="title_default_identity">Default identity</string>
    <string name="identity_menu_connect_account">Connect account</string>

    <string name="title_activity_welcome">Minerva - Digital Wallet</string>
    <string name="title_activity_settings">Settings</string>

    <string name="general_header">General</string>
    <!-- Preference Titles -->
    <string name="security_header">Security</string>
    <string name="all_for_screen_capture">Allow for screen capture</string>
    <string name="capture_summary_off">Screenshots and recording not allowed</string>
    <string name="capture_summary_on">Screenshots and recording allowed, be aware that other apps can capture your screen.</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="lets_start">Create new wallet for me</string>
    <string name="restore_label">Restore existing wallet</string>
    <string name="restore_wallet">Restore Wallet</string>
</resources>
