<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_identities"
            android:title="@string/nav_identities" />
        <item
            android:id="@+id/nav_values"
            android:title="@string/nav_values" />
        <item
            android:id="@+id/nav_services"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_activities"
            android:title="@string/nav_activities" />
        <item
            android:id="@+id/nav_web3test"
            android:title="web3 test" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup"
                android:title="@string/nav_backup" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/nav_settings" />
            <item
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
